--- a/607.1-haplotyper.Rmd
+++ b/607.1-haplotyper.Rmd
@@ -14,18 +14,26 @@ library(tidyverse)
 library(viridis)
 ```
 
+Note, we expect:        
+            Tel   Subt    Subm    M.      
+Australia   19    3   1   1    
+India       19    1   3   1    
 
-Have genos from 607.1
+Khuda-Bukhsh (1979) L. calcarifer.      
+n= lm (No. 1) + 3sm (Nos. 2-4) + 1st (No. 5) + 19T      
 
-gunzip -c dogeno4.geno.gz | grep NC_066852.1 | cut -f 2-192 > lc20.geno
-gunzip -c dogeno4.geno.gz | grep NC_066837.1 | cut -f 2-192 > lc05.geno
+Have genos from 607.1.      
+
+```{sh, eval=FALSE}
+gunzip -c dogeno4.geno.gz | grep NC_066852.1 | cut -f 2-192 > lc20.geno    
+gunzip -c dogeno4.geno.gz | grep NC_066837.1 | cut -f 2-192 > lc05.geno   
 
 ./105-omy05-haplotyper.pl genotypes.txt  genosToTest.txt bamlist
-This script is hard coded for some reason for the number of samples 
+#This script is hard coded for some reason for the number of samples 
  ../../omy05-haplotyper.pl lc20-diagnostic.tsv lc20.geno ../../bamlists/190-sample-names.txt > lc20-haplos.txt 
 ../../omy05-haplotyper.pl lc05-diagnostic.tsv lc05.geno ../../bamlists/190-sample-names.txt > lc05-haplos.txt 
-
- 
+```
+     
 ```{r}
 meta<-read_csv("meta/190.csv")
 
@@ -55,7 +63,11 @@ ggplot(ddf) +
   geom_col(aes(x=Region, y=Proportion, fill=Genotype)) +
   facet_grid(.~Lineage, scales = "free_x", space="free_x") +
   scale_fill_viridis_d(option="inferno") +
-  theme(axis.text.x = element_text(angle=45, vjust=1, hjust=1)) 
+  theme(axis.text.x = element_text(angle=45, vjust=1, hjust=1)) +
+  ggtitle("lc20 Variant Frequencies\n") +
+  theme(plot.title=element_text(size=14, face="bold", hjust=0.5))
+
+ggsave("outputs/607/lc20-frequency-plot.jpg")
 ```
 
 lc05
@@ -80,6 +92,10 @@ ggplot(ddf) +
   geom_col(aes(x=Region, y=Proportion, fill=Genotype)) +
   facet_grid(.~Lineage, scales = "free_x", space="free_x") +
   scale_fill_viridis_d(option="inferno") +
-  theme(axis.text.x = element_text(angle=45, vjust=1, hjust=1)) 
+  theme(axis.text.x = element_text(angle=45, vjust=1, hjust=1)) +
+  ggtitle("lc05 Variant Frequencies\n") +
+  theme(plot.title=element_text(size=14, face="bold", hjust=0.5))
+
+ggsave("outputs/607/lc05-frequency-plot.jpg")
 ```
 
