--- a/607-combined-data-sets.Rmd
+++ b/607-combined-data-sets.Rmd
@@ -148,7 +148,8 @@ Make a version with ggplot:
 ```{r}
 pcadf<-p$plot$pca$data %>% as_tibble()
 pcadf$Region<-factor(pcadf$Region, levels=c("AUE","Queensland","AUW","NorthernTerritory","PNG","PapuaNewGuinea","INA","Indonesia-K","Indonesia-SJ","Indonesia-SU",
-                                               "MAL","Cambodia","THA","Thailand","Vietnam","Philippines","Bangladesh","IndiaEasternCoast","IndiaWesternCoast"))
+                                               "MAL","Philippines","Vietnam","Cambodia","THA","Thailand","Bangladesh","IndiaEasternCoast","IndiaWesternCoast"))
+
 ```
 
 ```{r}
@@ -289,10 +290,11 @@ chroms<-p1 %>% group_by(chrom) %>% mutate(Start=min(Index), Stop=max(Index)) %>%
 #Make enough colors
 nb.cols <- nrow(chroms)
 mycolors <- colorRampPalette(brewer.pal(8, "Set1"))(nb.cols)
+#mycolors<-viridis(n=nb.cols, option="plasma")
 
-ggplot(p1) +
+md1<-ggplot(p1) +
   geom_rect(data=chroms, aes(xmin=Start, xmax=Stop, ymin=min(p1$Value1), ymax=max(p1$Value1)), fill=mycolors, alpha=0.25) +
-  geom_point(data=p1, aes(x=Index, y=Value1, color=chrom), alpha=0.75, cex=0.5) +
+  geom_point(data=p1, aes(x=Index, y=Value1, color=chrom), alpha=1, cex=0.5) +
   geom_point(data=outliers, aes(x=Index, y=Value1), color="black", cex=0.5) +
   theme_bw() +
   scale_x_continuous(breaks=chroms$Position, labels=chroms$chrom) +
@@ -323,11 +325,8 @@ outliers2 %>% group_by(chrom) %>% summarize(Count=n()) %>% arrange(-Count)
 chroms<-p2 %>% group_by(chrom) %>% mutate(Start=min(Index), Stop=max(Index)) %>% select(chrom,Start,Stop) %>% unique() %>% 
   mutate(Position=round((Start+Stop)/2))
 
-#Make enough colors
-nb.cols <- nrow(chroms)
-mycolors <- colorRampPalette(brewer.pal(8, "Set1"))(nb.cols)
 
-ggplot(p2) +
+md2<-ggplot(p2) +
   geom_rect(data=chroms, aes(xmin=Start, xmax=Stop, ymin=min(p2$Value2), ymax=max(p2$Value2)), fill=mycolors, alpha=0.25) +
   geom_point(data=p2, aes(x=Index, y=Value2, color=chrom), alpha=0.75, cex=0.5) +
   geom_point(data=outliers2, aes(x=Index, y=Value2), color="black", cex=0.5) +
@@ -349,7 +348,7 @@ p3<-MDS3 %>% mutate(Index=1:n())
 
 out3 <- boxplot.stats(p3$Value3)$out
 out_ind3 <- which(p3$Value3 %in% c(out3))
-out_ind3
+length(out_ind3)
 ```
 ```{r}
 outliers3<-p3[out_ind3,]
@@ -368,7 +367,7 @@ mycolors <- colorRampPalette(brewer.pal(8, "Set1"))(nb.cols)
 
 
 #Hmm.. I should be able to include a bunch of rectangles to offset chroms
-ggplot(p3) +
+md3<-ggplot(p3) +
   geom_rect(data=chroms, aes(xmin=Start, xmax=Stop, ymin=min(p3$Value3), ymax=max(p3$Value3)), fill=mycolors, alpha=0.25) +
   geom_point(data=p3, aes(x=Index, y=Value3, color=chrom), alpha=0.75, cex=0.5) +
   geom_point(data=outliers3, aes(x=Index, y=Value3), color="black", cex=0.5) +
@@ -383,11 +382,23 @@ ggplot(p3) +
   xlab("Chromosome")
 ```
 
+
+```{r}
+ggarrange(md1,md2,md3, ncol = 1)
+
+ggsave("outputs/607/Supplemental Figure S1.pdf")
+```
+Chrom lengths
+Lca03 23499962
+Lca05 28963731
+Lca20 23753645
+
 ```{sh, eval=FALSE}
 bcftools view -r NC_066852.1:6500000-8000000 outputs/607/snps-05.vcf.gz -O z > outputs/607/NC_066852.1-dummy-sub.vcf.gz     
-bcftools view -r NC_066852.1:3500000-23737464 outputs/607/snps-05.vcf.gz -O z > outputs/607/NC_066852.1-sub.vcf.gz    
 
-bcftools view -r NC_066837.1:5247652-28551740 outputs/607/snps-05.vcf.gz -O z > outputs/607/NC_066837.1-sub.vcf;    
+bcftools view -r NC_066852.1:3500000-23737464 outputs/607/snps-05.vcf.gz -O z > outputs/607/NC_066852.1-sub.vcf.gz    
+bcftools view -r NC_066837.1:5247652-28551740 outputs/607/snps-05.vcf.gz -O z > outputs/607/NC_066837.1-sub.vcf.gz    
+bcftools view -r NC_066835.1:1-17500000 outputs/607/snps-05.vcf.gz -O z > outputs/607/NC_066835.1-sub.vcf.gz    
 
 
 ```
@@ -408,6 +419,9 @@ pca1 <- dudi.pca(X,scannf=FALSE,scale=FALSE,nf=3)
 
 df<-pca1$li
 df<-df %>% bind_cols(meta)
+df$Region<-factor(df$Region, levels=c("AUE","Queensland","AUW","NorthernTerritory","PNG","PapuaNewGuinea","INA","Indonesia-K","Indonesia-SJ","Indonesia-SU",
+                                               "MAL","Philippines","Vietnam","Cambodia","THA","Thailand","Bangladesh","IndiaEasternCoast","IndiaWesternCoast"))
+
 eig<-pca1$eig/sum(pca1$eig)*100
 ```
 
@@ -419,7 +433,7 @@ pc12<-ggplot(df) +
   ylab(paste0("PC2 ",round(eig[2],2), "%")) +
   theme(panel.grid = element_blank()) +
   scale_fill_viridis_d(option="H") +
-  scale_shape_manual(values=c(21,24,22)) +
+  scale_shape_manual(values=c(21,23,24)) +
   guides(fill = guide_legend(override.aes = list(pch = 22))) +
   facet_wrap(.~DataType) +
   theme(legend.position = "top")
@@ -465,6 +479,7 @@ tops2 %>% select(Position, Diagnosis, Alternate) %>% arrange(Position) %>% write
 ```
 
 
+## Lca05
 
 ```{r}
 vcf<-read.vcfR(file="outputs/607/NC_066837.1-sub.vcf")
@@ -481,6 +496,9 @@ pca1 <- dudi.pca(X,scannf=FALSE,scale=FALSE,nf=3)
 
 df<-pca1$li
 df<-df %>% bind_cols(meta)
+df$Region<-factor(df$Region, levels=c("AUE","Queensland","AUW","NorthernTerritory","PNG","PapuaNewGuinea","INA","Indonesia-K","Indonesia-SJ","Indonesia-SU",
+                                               "MAL","Philippines","Vietnam","Cambodia","THA","Thailand","Bangladesh","IndiaEasternCoast","IndiaWesternCoast"))
+
 eig<-pca1$eig/sum(pca1$eig)*100
 ```
 
@@ -492,7 +510,7 @@ pc12<-ggplot(df) +
   ylab(paste0("PC2 ",round(eig[2],2), "%")) +
   theme(panel.grid = element_blank()) +
   scale_fill_viridis_d(option="H") +
-  scale_shape_manual(values=c(21,24,22)) +
+  scale_shape_manual(values=c(21,23,24)) +
   guides(fill = guide_legend(override.aes = list(pch = 22))) +
   facet_wrap(.~DataType) +
   theme(legend.position = "top")
@@ -535,4 +553,81 @@ tops2<-tops %>% left_join(sites) %>% mutate(Diagnosis=ifelse(MajorMinor=="0",Maj
   mutate(Alternate=ifelse(MajorMinor=="1",Major,Minor)) %>%
            mutate(Genotype=paste0(Diagnosis,Diagnosis))
 tops2 %>% select(Position, Diagnosis, Alternate) %>% arrange(Position) %>% write_tsv(file="outputs/607/lc05-diagnostic.tsv",col_names = FALSE)
+```
+
+## Lca03
+
+
+```{r}
+vcf<-read.vcfR(file="outputs/607/NC_066835.1-sub.vcf.gz")
+genind<-vcfR2genind(vcf)
+genind@pop<-as.factor(meta$Region)
+
+```
+
+```{r}
+gen<-genind
+X <- tab(gen, NA.method="mean")
+
+pca1 <- dudi.pca(X,scannf=FALSE,scale=FALSE,nf=3)
+
+df<-pca1$li
+df<-df %>% bind_cols(meta)
+df$Region<-factor(df$Region, levels=c("AUE","Queensland","AUW","NorthernTerritory","PNG","PapuaNewGuinea","INA","Indonesia-K","Indonesia-SJ","Indonesia-SU",
+                                               "MAL","Philippines","Vietnam","Cambodia","THA","Thailand","Bangladesh","IndiaEasternCoast","IndiaWesternCoast"))
+
+eig<-pca1$eig/sum(pca1$eig)*100
+```
+
+```{r}
+pc12<-ggplot(df) + 
+  geom_point(aes(x=Axis1, y=Axis2, fill=Region, shape=Lineage), alpha=0.75, cex=2) +
+  theme_bw() +
+  xlab(paste0("PC1 ",round(eig[1],2), "%")) +
+  ylab(paste0("PC2 ",round(eig[2],2), "%")) +
+  theme(panel.grid = element_blank()) +
+  scale_fill_viridis_d(option="H") +
+  scale_shape_manual(values=c(21,23,24)) +
+  guides(fill = guide_legend(override.aes = list(pch = 22))) +
+  facet_wrap(.~DataType) +
+  theme(legend.position = "top")
+pc12
+
+ggsave("outputs/607/NC_066835.1.jpeg", width=8)
+```
+
+Pulling loadings on axis1    
+```{r}
+loadings<-pca1$c1 %>% as_tibble()
+loadings$Allele<-rownames(pca1$c1)  
+loadings$Position<-gsub("NC_.*_|\\.\\d$","",loadings$Allele)
+loadings$Position<-as.numeric(loadings$Position)
+
+tops<-loadings %>% arrange(-CS1) %>% slice_max(order_by = CS1,prop = .05) %>% select(-CS2, -CS3) %>% 
+  mutate(MajorMinor=gsub("NC.*\\.","",Allele)) 
+tops$Chrom<-gsub("_1_.*$",".1",tops$Allele)
+```
+
+```{r}
+ggplot(loadings, aes(x=Position, y=CS1)) +
+  geom_point(pch=21, alpha=0.50, fill="black") +
+  geom_point(data=tops, aes(x=Position, y=CS1), fill="skyblue", pch=21, alpha=0.8) +
+  theme(axis.text.x = element_blank(), axis.ticks.x=element_blank())
+```
+
+```{sh, eval=FALSE}
+ gunzip -c NC_066835.1-sub.vcf.gz  | grep -v "#" | cut -f 1-5 > NC_066835.1-major-minor.tsv
+```
+
+
+```{r}
+sites<-read_tsv("outputs/607/NC_066835.1-major-minor.tsv", col_names = c("Chrom","Position","Site","Major","Minor")) %>% select(-Site)
+```
+
+
+```{r}
+tops2<-tops %>% left_join(sites) %>% mutate(Diagnosis=ifelse(MajorMinor=="0",Major,Minor)) %>%
+  mutate(Alternate=ifelse(MajorMinor=="1",Major,Minor)) %>%
+           mutate(Genotype=paste0(Diagnosis,Diagnosis))
+tops2 %>% select(Position, Diagnosis, Alternate) %>% arrange(Position) %>% write_tsv(file="outputs/607/lc03-diagnostic.tsv",col_names = FALSE)
 ```
